2015-12-28  Mike Frysinger  <vapier@gentoo.org>

	[BZ #15421]
	* sysdeps/ia64/fpu/w_lgamma_main.c: Change gammaf to gamma.

2015-12-23  Torvald Riegel  <triegel@redhat.com>

	[BZ #13690]
	* sysdeps/nptl/lowlevellock.h (__lll_unlock): Do not access the lock
	after releasing it.
	(__lll_robust_unlock): Likewise.
	* nptl/pthread_mutex_unlock.c (__pthread_mutex_unlock_full): Likewise.
	* sysdeps/unix/sysv/linux/sparc/lowlevellock.h (lll_unlock): Likewise.
	(lll_robust_unlock): Likewise.
	* sysdeps/unix/sysv/linux/lowlevellock-futex.h (__lll_private_flag):
	Prevent warnings in callers.

2015-12-23  Florian Weimer  <fweimer@redhat.com>

	* malloc/arena.c (list_lock): Update comment.

2015-12-22  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* sysdeps/powerpc/hwcapinfo.c: Export symbol
	__parse_hwcap_and_convert_at_platform to libc.a.

2015-12-22  Carlos Eduardo Seo  <cseo@linux.vnet.ibm.com>

	* sysdeps/powerpc/dl-procinfo.c (_dl_powerpc_platforms): Added
	platform and feature support for POWER9.
	* sysdeps/powerpc/dl-procinfo.h: Likewise.
	* sysdeps/powerpc/powerpc32/power9/Implies: New file.
	* sysdeps/powerpc/powerpc32/power9/fpu/multiarch/Implies: Likewise.
	* sysdeps/powerpc/powerpc32/power9/multiarch/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power9/Implies: Likewise, for powerpc64.
	* sysdeps/powerpc/powerpc64/power9/fpu/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power9/fpu/multiarch/Implies: Likewise.
	* sysdeps/powerpc/powerpc64/power9/multiarch/Implies: Likewise.

2015-12-22  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	Harmonize generic stdio-lock support with nptl

	This fixes build when _IO_funlockfile is a macro, fixes build where
	_IO_acquire_lock_clear_flags2 is used, and fixes unlocking on unexpected
	stack unwind.

	* sysdeps/generic/stdio-lock.h [__EXCEPTIONS] (_IO_acquire_lock,
	_IO_release_lock ): Use cleanup attribute on new
	_IO_acquire_lock_file variable instead of assuming that
	_IO_release_lock will be called.