@@ -1,3 +1,8 @@
+2015-12-29  John David Anglin  <danglin@gcc.gnu.org>
+
+	[BZ #19270]
+	* sysdeps/hppa/fpu/bits/mathdef.h (__NO_LONG_DOUBLE_MATH): Define.
+
 2015-12-28  Mike Frysinger  <vapier@gentoo.org>
 
 	[BZ #15421]
